# md-notes

./: .gitignore  .markdownlint-cli2.jsonc  .prettierrc  Pipfile  README.md  main.py  mkdocs.yml  package.json  pyproject.toml  zensical.toml
.github/workflows/: build.yml
docs/: index.md
docs/blog/: modern-cpp.md  ustc-websites.md  xzkd-new-tokens.md
docs/blog/cpp/: modern-cpp.md
docs/blog/lab/: inet.md
docs/blog/python/: packages.md
docs/blog/server/: headscale.md  rpi-setup.md
docs/blog/terminal/: cheatsheets.md  rpi-setup.md
docs/blog/typst/: typst-tutorial-for-latex-user.md
docs/blog/ustc/: schoolwork-links.md  ustc-websites.md  xzkd-new-tokens.md
docs/css/: extra.css
docs/index/: about.md  id_rsa.pub  test.md
docs/javascripts/: svg_dark.js
docs/lab/: checklist.md  coder.md  index.md  proxy.md  tutorial.md
docs/lab/admin/: checklist.md  cls1-gateway.md  network.md  services.md  upgrading.md
docs/lab/cls1/: srv1.md  srv2.md
docs/lab/cls2/: index.md  srv1.md  srv2.md  srv3.md  srv4.md  srv5.md  srv6.md  srv7.md
docs/lab/maintenance/: cleanup.md  log.md  sssd.md
docs/lab/srv/: 8x4090.md
docs/math/: index.md
docs/math/algebra/: quaternion.md
docs/math/analysis/: attention-is-all-you-need.md  calculus-of-variations.md  calculus.md  fourier.md  functional-analysis.md  measure-theory.md  naive-set-theory-to-zfc.md
docs/math/probability/: probability.md  stochastic-processes.md
docs/ml/: index.md
docs/ml/dl/: cnn.md  review.md
docs/ml/traditional/: linear-regression.md  (+1 more)
overrides/partials/: comments.html
(+19 files in other folders)
