[project]
name = "md-notes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mdx-truly-sane-lists>=1.3",
    "mkdocs>=1.6.1",
    "mkdocs-git-revision-date-localized-plugin>=1.4.7",
    "mkdocs-glightbox>=0.5.1",
    "mkdocs-material>=9.6.20",
    "mkdocs-redirects>=1.2.2",
    "pymdown-extensions>=10.16.1",
    "python-markdown-document-offsets-injection-extension>=0.5.13",
    "zensical>=0.0.24",
]
